<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClickingThrones</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="food">Food</string>
    <string name="stone">Stone</string>
    <string name="lumber">Lumber</string>
    <string name="gold">Gold</string>
    <string name="mana">Mana</string>
    <string name="clickerButton">Click Me!</string>
    <string name="upgrades">Upgrades</string>
    <string name="buy">Buy</string>
    <string name="twobuttons">For 10 of each resouce you get buy two buttons. :P</string>

    <string-array name="resouces_array">
        <item>Food</item>
        <item>Lumber</item>
        <item>Stone</item>
        <item>Gold</item>
        <item>Mana</item>
    </string-array>

    <string name="title_activity_upgrade_activty">UpgradeActivty</string>

</resources>
